--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,17 @@
             "email": "202100364c@utea.edu.pe"
         }
     ],
-    "require": {},
     "autoload": {
         "psr-4": {
             "App\\": "app/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "10"
     }
 }
